BFsharp.Formula/FormulaParser.cs
// $ANTLR 3.1.2 D:\\My projects\\BFsharp\\BFsharp.Formula\\Formula.g 2018-06-10 19:27:45

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 168, 219
// Unreachable code detected.
#pragma warning disable 162


using System;
using Antlr.Runtime;
using IList 		= System.Collections.IList;
using ArrayList 	= System.Collections.ArrayList;
using Stack 		= Antlr.Runtime.Collections.StackList;



using Antlr.Runtime.Tree;

namespace  BFsharp.Formula 
{
public partial class FormulaParser : Parser
{
    public static readonly string[] tokenNames = new string[] 
	{
        "<invalid>", 
		"<EOR>", 
		"<DOWN>", 
		"<UP>", 
		"AND", 
		"BooleanLiteral", 
		"CALL", 
		"COMMENT", 
		"DecimalLiteral", 
		"DIVIDE", 
		"EQUALS", 
		"Exponent", 
		"FloatTypeSuffix", 
		"GREATER", 
		"GREATEROREQUALS", 
		"ID", 
		"IntegerLiteral", 
		"IntegerTypeSuffix", 
		"LAMBDA", 
		"LESS", 
		"LESSOREQUALS", 
		"LINE_COMMENT", 
		"METHOD", 
		"MINUS", 
		"MODULO", 
		"MULTIPLY", 
		"NOTEQUALS", 
		"OR", 
		"PARAM", 
		"PLUS", 
		"StringLiteral", 
		"TYPENAME", 
		"WS", 
		"'('", 
		"')'", 
		"','", 
		"':'", 
		"';'", 
		"'?'", 
		"'{'", 
		"'}'", 
		"'='", 
		"'=>'", 
		"'property'", 
		"'rule'"
    };

    public const int EOF = -1;
    public const int T__33 = 33;
    public const int T__34 = 34;
    public const int T__35 = 35;
    public const int T__36 = 36;
    public const int T__37 = 37;
    public const int T__38 = 38;
    public const int T__39 = 39;
    public const int T__40 = 40;
    public const int T__41 = 41;
    public const int T__42 = 42;
    public const int T__43 = 43;
    public const int T__44 = 44;
    public const int AND = 4;
    public const int BooleanLiteral = 5;
    public const int CALL = 6;
    public const int COMMENT = 7;
    public const int DecimalLiteral = 8;
    public const int DIVIDE = 9;
    public const int EQUALS = 10;
    public const int Exponent = 11;
    public const int FloatTypeSuffix = 12;
    public const int GREATER = 13;
    public const int GREATEROREQUALS = 14;
    public const int ID = 15;
    public const int IntegerLiteral = 16;
    public const int IntegerTypeSuffix = 17;
    public const int LAMBDA = 18;
    public const int LESS = 19;
    public const int LESSOREQUALS = 20;
    public const int LINE_COMMENT = 21;
    public const int METHOD = 22;
    public const int MINUS = 23;
    public const int MODULO = 24;
    public const int MULTIPLY = 25;
    public const int NOTEQUALS = 26;
    public const int OR = 27;
    public const int PARAM = 28;
    public const int PLUS = 29;
    public const int StringLiteral = 30;
    public const int TYPENAME = 31;
    public const int WS = 32;

    // delegates
    // delegators



        public FormulaParser(ITokenStream input)
    		: this(input, new RecognizerSharedState()) {
        }

        public FormulaParser(ITokenStream input, RecognizerSharedState state)
    		: base(input, state) {
            InitializeCyclicDFAs();

             
        }
        
    protected ITreeAdaptor adaptor = new CommonTreeAdaptor();

    public ITreeAdaptor TreeAdaptor
    {
        get { return this.adaptor; }
        set {
    	this.adaptor = value;
    	}
    }

    override public string[] TokenNames {
		get { return FormulaParser.tokenNames; }
    }

    override public string GrammarFileName {
		get { return "D:\\My projects\\BFsharp\\BFsharp.Formula\\Formula.g"; }
    }


    public class startEntity_return : ParserRuleReturnScope
    {
        private CommonTree tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (CommonTree) value; }
        }
    };

    // $ANTLR start "startEntity"
    // D:\\My projects\\BFsharp\\BFsharp.Formula\\Formula.g:19:0: startEntity : ( rules )? ( properties )? EOF ;
    public FormulaParser.startEntity_return startEntity() // throws RecognitionException [1]
    {   
        FormulaParser.startEntity_return retval = new FormulaParser.startEntity_return();
        retval.Start = input.LT(1);

        CommonTree root_0 = null;

        IToken EOF3 = null;
        FormulaParser.rules_return rules1 = default(FormulaParser.rules_return);

        FormulaParser.properties_return properties2 = default(FormulaParser.properties_return);


        CommonTree EOF3_tree=null;

        try 
    	{
            // D:\\My projects\\BFsharp\\BFsharp.Formula\\Formula.g:19:14: ( ( rules )? ( properties )? EOF )
            // D:\\My projects\\BFsharp\\BFsharp.Formula\\Formula.g:19:14: ( rules )? ( properties )? EOF
            {
            	root_0 = (CommonTree)adaptor.GetNilNode();

            	// D:\\My projects\\BFsharp\\BFsharp.Formula\\Formula.g:19:14: ( rules )?
            	int alt1 = 2;
            	int LA1_0 = input.LA(1);

            	if ( (LA1_0 == 44) )
            	{
            	    alt1 = 1;
            	}
            	switch (alt1) 
            	{
            	    case 1 :
            	        // D:\\My projects\\BFsharp\\BFsharp.Formula\\Formula.g:19:0: rules
            	        {
            	        	PushFollow(FOLLOW_rules_in_startEntity79);
            	        	rules1 = rules();
            	        	state.followingStackPointer--;

            	        	adaptor.AddChild(root_0, rules1.Tree);

            	        }
            	        break;

            	}

            	// D:\\My projects\\BFsharp\\BFsharp.Formula\\Formula.g:19:21: ( properties )?
            	int alt2 = 2;
            	int LA2_0 = input.LA(1);

            	if ( (LA2_0 == 43) )
            	{
            	    alt2 = 1;
            	}
            	switch (alt2) 
            	{
            	    case 1 :
            	        // D:\\My projects\\BFsharp\\BFsharp.Formula\\Formula.g:19:0: properties
            	        {
            	        	PushFollow(FOLLOW_properties_in_startEntity82);
            	        	properties2 = properties();
            	        	state.followingStackPointer--;

            	        	adaptor.AddChild(root_0, properties2.Tree);

            	        }
            	        break;

            	}

            	EOF3=(IToken)Match(input,EOF,FOLLOW_EOF_in_startEntity85); 
            		EOF3_tree = (CommonTree)adaptor.Create(EOF3);
            		adaptor.AddChild(root_0, EOF3_tree);


            }

            retval.Stop = input.LT(-1);

            	retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (CommonTree)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "startEntity"

    public class rules_return : ParserRuleReturnScope
    {
        private CommonTree tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (CommonTree) value; }
        }
    };

    // $ANTLR start "rules"
    // D:\\My projects\\BFsharp\\BFsharp.Formula\\Formula.g:21:0: rules : 'rule' '{' ( rule )* '}' ;
    public FormulaParser.rules_return rules() // throws RecognitionException [1]
    {   
        FormulaParser.rules_return retval = new FormulaParser.rules_return();
        retval.Start = input.LT(1);

        CommonTree root_0 = null;

        IToken string_literal4 = null;
        IToken char_literal5 = null;
        IToken char_literal7 = null;
        FormulaParser.rule_return rule6 = default(FormulaParser.rule_return);


        CommonTree string_literal4_tree=null;
        CommonTree char_literal5_tree=null;
        CommonTree char_literal7_tree=null;

        try 
    	{
            // D:\\My projects\\BFsharp\\BFsharp.Formula\\Formula.g:21:9: ( 'rule' '{' ( rule )* '}' )
            // D:\\My projects\\BFsharp\\BFsharp.Formula\\Formula.g:21:9: 'rule' '{' ( rule )* '}'
            {
            	root_0 = (CommonTree)adaptor.GetNilNode();

            	string_literal4=(IToken)Match(input,44,FOLLOW_44_in_rules93); 
            		string_literal4_tree = (CommonTree)adaptor.Create(string_literal4);
            		root_0 = (CommonTree)adaptor.BecomeRoot(string_literal4_tree, root_0);

            	char_literal5=(IToken)Match(input,39,FOLLOW_39_in_rules96); 
            		char_literal5_tree = (CommonTree)adaptor.Create(char_literal5);
            		root_0 = (CommonTree)adaptor.BecomeRoot(char_literal5_tree, root_0);

            	// D:\\My projects\\BFsharp\\BFsharp.Formula\\Formula.g:21:22: ( rule )*
            	do 
            	{
            	    int alt3 = 2;
            	    int LA3_0 = input.LA(1);

            	    if ( (LA3_0 == BooleanLiteral || LA3_0 == DecimalLiteral || (LA3_0 >= ID && LA3_0 <= IntegerLiteral) || LA3_0 == MINUS || LA3_0 == StringLiteral || LA3_0 == 33) )
            	    {
            	        alt3 = 1;
            	    }


            	    switch (alt3) 
            		{
            			case 1 :
            			    // D:\\My projects\\BFsharp\\BFsharp.Formula\\Formula.g:21:0: rule
            			    {
            			    	PushFollow(FOLLOW_rule_in_rules99);
            			    	rule6 = rule();
            			    	state.followingStackPointer--;

            			    	adaptor.AddChild(root_0, rule6.Tree);

            			    }
            			    break;

            			default:
            			    goto loop3;
            	    }
            	} while (true);

            	loop3:
            		;	// Stops C# compiler whining that label 'loop3' has no statements

            	char_literal7=(IToken)Match(input,40,FOLLOW_40_in_rules102); 
            		char_literal7_tree = (CommonTree)adaptor.Create(char_literal7);
            		root_0 = (CommonTree)adaptor.BecomeRoot(char_literal7_tree, root_0);


            }

            retval.Stop = input.LT(-1);

            	retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (CommonTree)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "rules"

    public class properties_return : ParserRuleReturnScope
    {
        private CommonTree tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (CommonTree) value; }
        }
    };

    // $ANTLR start "properties"
    // D:\\My projects\\BFsharp\\BFsharp.Formula\\Formula.g:22:0: properties : 'property' '{' ( property )* '}' ;
    public FormulaParser.properties_return properties() // throws RecognitionException [1]
    {   
        FormulaParser.properties_return retval = new FormulaParser.properties_return();
        retval.Start = input.LT(1);

        CommonTree root_0 = null;

        IToken string_literal8 = null;
        IToken char_literal9 = null;
        IToken char_literal11 = null;
        FormulaParser.property_return property10 = default(FormulaParser.property_return);


        CommonTree string_literal8_tree=null;
        CommonTree char_literal9_tree=null;
        CommonTree char_literal11_tree=null;

        try 
    	{
            // D:\\My projects\\BFsharp\\BFsharp.Formula\\Formula.g:23:5: ( 'property' '{' ( property )* '}' )
            // D:\\My projects\\BFsharp\\BFsharp.Formula\\Formula.g:23:5: 'property' '{' ( property )* '}'
            {
            	root_0 = (CommonTree)adaptor.GetNilNode();

            	string_literal8=(IToken)Match(input,43,FOLLOW_43_in_properties112); 
            		string_literal8_tree = (CommonTree)adaptor.Create(string_literal8);
            		root_0 = (CommonTree)adaptor.BecomeRoot(string_literal8_tree, root_0);

            	char_literal9=(IToken)Match(input,39,FOLLOW_39_in_properties115); 
            		char_literal9_tree = (CommonTree)adaptor.Create(char_literal9);
            		root_0 = (CommonTree)adaptor.BecomeRoot(char_literal9_tree, root_0);

            	// D:\\My projects\\BFsharp\\BFsharp.Formula\\Formula.g:23:22: ( property )*
            	do 
            	{
            	    int alt4 = 2;
            	    int LA4_0 = input.LA(1);

            	    if ( (LA4_0 == ID) )
            	    {
            	        alt4 = 1;
            	    }


            	    switch (alt4) 
            		{
            			case 1 :
            			    // D:\\My projects\\BFsharp\\BFsharp.Formula\\Formula.g:23:0: property
            			    {
            			    	PushFollow(FOLLOW_property_in_properties118);
            			    	property10 = property();
            			    	state.followingStackPointer--;

            			    	adaptor.AddChild(root_0, property10.Tree);

            			    }
            			    break;

            			default:
            			    goto loop4;
            	    }
            	} while (true);

            	loop4:
            		;	// Stops C# compiler whining that label 'loop4' has no statements

            	char_literal11=(IToken)Match(input,40,FOLLOW_40_in_properties121); 
            		char_literal11_tree = (CommonTree)adaptor.Create(char_literal11);
            		root_0 = (CommonTree)adaptor.BecomeRoot(char_literal11_tree, root_0);


            }

            retval.Stop = input.LT(-1);

            	retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (CommonTree)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "properties"

    public class rule_return : ParserRuleReturnScope
    {
        private CommonTree tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (CommonTree) value; }
        }
    };

    // $ANTLR start "rule"
    // D:\\My projects\\BFsharp\\BFsharp.Formula\\Formula.g:25:0: rule : ( ruleType )? ( businessRule )? conditionalExpression ( ',' conditionalExpression )* ( settings )? ';' ;
    public FormulaParser.rule_return rule() // throws RecognitionException [1]
    {   
        FormulaParser.rule_return retval = new FormulaParser.rule_return();
        retval.Start = input.LT(1);

        CommonTree root_0 = null;

        IToken char_literal15 = null;
        IToken char_literal18 = null;
        FormulaParser.ruleType_return ruleType12 = default(FormulaParser.ruleType_return);

        FormulaParser.businessRule_return businessRule13 = default(FormulaParser.businessRule_return);

        FormulaParser.conditionalExpression_return conditionalExpression14 = default(FormulaParser.conditionalExpression_return);

        FormulaParser.conditionalExpression_return conditionalExpression16 = default(FormulaParser.conditionalExpression_return);

        FormulaParser.settings_return settings17 = default(FormulaParser.settings_return);


        CommonTree char_literal15_tree=null;
        CommonTree char_literal18_tree=null;

        try 
    	{
            // D:\\My projects\\BFsharp\\BFsharp.Formula\\Formula.g:25:8: ( ( ruleType )? ( businessRule )? conditionalExpression ( ',' conditionalExpression )* ( settings )? ';' )
            // D:\\My projects\\BFsharp\\BFsharp.Formula\\Formula.g:25:8: ( ruleType )? ( businessRule )? conditionalExpression ( ',' conditionalExpression )* ( settings )? ';'
            {
            	root_0 = (CommonTree)adaptor.GetNilNode();

            	// D:\\My projects\\BFsharp\\BFsharp.Formula\\Formula.g:25:8: ( ruleType )?
            	int alt5 = 2;
            	int LA5_0 = input.LA(1);

            	if ( (LA5_0 == ID) )
            	{
            	    int LA5_1 = input.LA(2);

            	    if ( (LA5_1 == 36) )
            	    {
            	        alt5 = 1;
            	    }
            	}
            	switch (alt5) 
            	{
            	    case 1 :
            	        // D:\\My projects\\BFsharp\\BFsharp.Formula\\Formula.g:25:0: ruleType
            	        {
            	        	PushFollow(FOLLOW_ruleType_in_rule131);
            	        	ruleType12 = ruleType();
            	        	state.followingStackPointer--;

            	        	adaptor.AddChild(root_0, ruleType12.Tree);

            	        }
            	        break;

            	}

            	// D:\\My projects\\BFsharp\\BFsharp.Formula\\Formula.g:25:18: ( businessRule )?
            	int alt6 = 2;
            	alt6 = dfa6.Predict(input);
            	switch (alt6) 
            	{
            	    case 1 :
            	        // D:\\My projects\\BFsharp\\BFsharp.Formula\\Formula.g:25:0: businessRule
            	        {
            	        	PushFollow(FOLLOW_businessRule_in_rule134);
            	        	businessRule13 = businessRule();
            	        	state.followingStackPointer--;

            	        	adaptor.AddChild(root_0, businessRule13.Tree);

            	        }
            	        break;

            	}

            	PushFollow(FOLLOW_conditionalExpression_in_rule137);
            	conditionalExpression14 = conditionalExpression();
            	state.followingStackPointer--;

            	adaptor.AddChild(root_0, conditionalExpression14.Tree);
            	// D:\\My projects\\BFsharp\\BFsharp.Formula\\Formula.g:25:54: ( ',' conditionalExpression )*
            	do 
            	{
            	    int alt7 = 2;
            	    int LA7_0 = input.LA(1);

            	    if ( (LA7_0 == 35) )
            	    {
            	        alt7 = 1;
            	    }


            	    switch (alt7) 
            		{
            			case 1 :
            			    // D:\\My projects\\BFsharp\\BFsharp.Formula\\Formula.g:25:55: ',' conditionalExpression
            			    {
            			    	char_literal15=(IToken)Match(input,35,FOLLOW_35_in_rule140); 
            			    		char_literal15_tree = (CommonTree)adaptor.Create(char_literal15);
            			    		adaptor.AddChild(root_0, char_literal15_tree);

            			    	PushFollow(FOLLOW_conditionalExpression_in_rule142);
            			    	conditionalExpression16 = conditionalExpression();
            			    	state.followingStackPointer--;

            			    	adaptor.AddChild(root_0, conditionalExpression16.Tree);

            			    }
            			    break;

            			default:
            			    goto loop7;
            	    }
            	} while (true);

            	loop7:
            		;	// Stops C# compiler whining that label 'loop7' has no statements

            	// D:\\My projects\\BFsharp\\BFsharp.Formula\\Formula.g:25:83: ( settings )?
            	int alt8 = 2;
            	int LA8_0 = input.LA(1);

            	if ( (LA8_0 == 39) )
            	{
            	    alt8 = 1;
            	}
            	switch (alt8) 
            	{
            	    case 1 :
            	        // D:\\My projects\\BFsharp\\BFsharp.Formula\\Formula.g:25:0: settings
            	        {
            	        	PushFollow(FOLLOW_settings_in_rule146);
            	        	settings17 = settings();
            	        	state.followingStackPointer--;

            	        	adaptor.AddChild(root_0, settings17.Tree);

            	        }
            	        break;

            	}

            	char_literal18=(IToken)Match(input,37,FOLLOW_37_in_rule149); 
            		char_literal18_tree = (CommonTree)adaptor.Create(char_literal18);
            		root_0 = (CommonTree)adaptor.BecomeRoot(char_literal18_tree, root_0);


            }

            retval.Stop = input.LT(-1);

            	retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (CommonTree)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "rule"

    public class property_return : ParserRuleReturnScope
    {
        private CommonTree tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (CommonTree) value; }
        }
    };

    // $ANTLR start "property"
    // D:\\My projects\\BFsharp\\BFsharp.Formula\\Formula.g:26:0: property : ID ID ';' ;
    public FormulaParser.property_return property() // throws RecognitionException [1]
    {   
        FormulaParser.property_return retval = new FormulaParser.property_return();
        retval.Start = input.LT(1);

        CommonTree root_0 = null;

        IToken ID19 = null;
        IToken ID20 = null;
        IToken char_literal21 = null;

        CommonTree ID19_tree=null;
        CommonTree ID20_tree=null;
        CommonTree char_literal21_tree=null;

        try 
    	{
            // D:\\My projects\\BFsharp\\BFsharp.Formula\\Formula.g:26:11: ( ID ID ';' )
            // D:\\My projects\\BFsharp\\BFsharp.Formula\\Formula.g:26:11: ID ID ';'
            {
            	root_0 = (CommonTree)adaptor.GetNilNode();

            	ID19=(IToken)Match(input,ID,FOLLOW_ID_in_property156); 
            		ID19_tree = (CommonTree)adaptor.Create(ID19);
            		adaptor.AddChild(root_0, ID19_tree);

            	ID20=(IToken)Match(input,ID,FOLLOW_ID_in_property158); 
            		ID20_tree = (CommonTree)adaptor.Create(ID20);
            		adaptor.AddChild(root_0, ID20_tree);

            	char_literal21=(IToken)Match(input,37,FOLLOW_37_in_property160); 
            		char_literal21_tree = (CommonTree)adaptor.Create(char_literal21);
            		root_0 = (CommonTree)adaptor.BecomeRoot(char_literal21_tree, root_0);


            }

            retval.Stop = input.LT(-1);

            	retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (CommonTree)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "property"

    public class ruleType_return : ParserRuleReturnScope
    {
        private CommonTree tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (CommonTree) value; }
        }
    };

    // $ANTLR start "ruleType"
    // D:\\My projects\\BFsharp\\BFsharp.Formula\\Formula.g:28:0: ruleType : ID ':' ;
    public FormulaParser.ruleType_return ruleType() // throws RecognitionException [1]
    {   
        FormulaParser.ruleType_return retval = new FormulaParser.ruleType_return();
        retval.Start = input.LT(1);

        CommonTree root_0 = null;

        IToken ID22 = null;
        IToken char_literal23 = null;

        CommonTree ID22_tree=null;
        CommonTree char_literal23_tree=null;

        try 
    	{
            // D:\\My projects\\BFsharp\\BFsharp.Formula\\Formula.g:28:11: ( ID ':' )
            // D:\\My projects\\BFsharp\\BFsharp.Formula\\Formula.g:28:11: ID ':'
            {
            	root_0 = (CommonTree)adaptor.GetNilNode();

            	ID22=(IToken)Match(input,ID,FOLLOW_ID_in_ruleType168); 
            		ID22_tree = (CommonTree)adaptor.Create(ID22);
            		adaptor.AddChild(root_0, ID22_tree);

            	char_literal23=(IToken)Match(input,36,FOLLOW_36_in_ruleType170); 
            		char_literal23_tree = (CommonTree)adaptor.Create(char_literal23);
            		root_0 = (CommonTree)adaptor.BecomeRoot(char_literal23_tree, root_0);


            }

            retval.Stop = input.LT(-1);

            	retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (CommonTree)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "ruleType"

    public class businessRule_return : ParserRuleReturnScope
    {
        private CommonTree tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (CommonTree) value; }
        }
    };

    // $ANTLR start "businessRule"
    // D:\\My projects\\BFsharp\\BFsharp.Formula\\Formula.g:29:0: businessRule : ID ( '.' ID )* '=' ;
    public FormulaParser.businessRule_return businessRule() // throws RecognitionException [1]
    {   
        FormulaParser.businessRule_return retval = new FormulaParser.businessRule_return();
        retval.Start = input.LT(1);

        CommonTree root_0 = null;

        IToken ID24 = null;
        IToken char_literal25 = null;
        IToken ID26 = null;
        IToken char_literal27 = null;

        CommonTree ID24_tree=null;
        CommonTree char_literal25_tree=null;
        CommonTree ID26_tree=null;
        CommonTree char_literal27_tree=null;

        try 
    	{
            // D:\\My projects\\BFsharp\\BFsharp.Formula\\Formula.g:30:4: ( ID ( '.' ID )* '=' )
            // D:\\My projects\\BFsharp\\BFsharp.Formula\\Formula.g:30:4: ID ( '.' ID )* '='
            {
            	root_0 = (CommonTree)adaptor.GetNilNode();

            	ID24=(IToken)Match(input,ID,FOLLOW_ID_in_businessRule179); 
            		ID24_tree = (CommonTree)adaptor.Create(ID24);
            		adaptor.AddChild(root_0, ID24_tree);

            	// D:\\My projects\\BFsharp\\BFsharp.Formula\\Formula.g:30:7: ( '.' ID )*
            	do 
            	{
            	    int alt9 = 2;
            	    int LA9_0 = input.LA(1);

            	    if ( (LA9_0 == CALL) )
            	    {
            	        alt9 = 1;
            	    }


            	    switch (alt9) 
            		{
            			case 1 :
            			    // D:\\My projects\\BFsharp\\BFsharp.Formula\\Formula.g:30:8: '.' ID
            			    {
            			    	char_literal25=(IToken)Match(input,CALL,FOLLOW_CALL_in_businessRule182); 
            			    		char_literal25_tree = (CommonTree)adaptor.Create(char_literal25);
            			    		root_0 = (CommonTree)adaptor.BecomeRoot(char_literal25_tree, root_0);

            			    	ID26=(IToken)Match(input,ID,FOLLOW_ID_in_businessRule185); 
            			    		ID26_tree = (CommonTree)adaptor.Create(ID26);
            			    		adaptor.AddChild(root_0, ID26_tree);


            			    }
            			    break;

            			default:
            			    goto loop9;
            	    }
            	} while (true);

            	loop9:
            		;	// Stops C# compiler whining that label 'loop9' has no statements

            	char_literal27=(IToken)Match(input,41,FOLLOW_41_in_businessRule189); 
            		char_literal27_tree = (CommonTree)adaptor.Create(char_literal27);
            		root_0 = (CommonTree)adaptor.BecomeRoot(char_literal27_tree, root_0);


            }

            retval.Stop = input.LT(-1);

            	retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (CommonTree)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "businessRule"

    public class settings_return : ParserRuleReturnScope
    {
        private CommonTree tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (CommonTree) value; }
        }
    };

    // $ANTLR start "settings"
    // D:\\My projects\\BFsharp\\BFsharp.Formula\\Formula.g:32:0: settings : '{' ( setting )? ( ',' setting )* '}' ;
    public FormulaParser.settings_return settings() // throws RecognitionException [1]
    {   
        FormulaParser.settings_return retval = new FormulaParser.settings_return();
        retval.Start = input.LT(1);

        CommonTree root_0 = null;

        IToken char_literal28 = null;
        IToken char_literal30 = null;
        IToken char_literal32 = null;
        FormulaParser.setting_return setting29 = default(FormulaParser.setting_return);

        FormulaParser.setting_return setting31 = default(FormulaParser.setting_return);


        CommonTree char_literal28_tree=null;
        CommonTree char_literal30_tree=null;
        CommonTree char_literal32_tree=null;

        try 
    	{
            // D:\\My projects\\BFsharp\\BFsharp.Formula\\Formula.g:32:11: ( '{' ( setting )? ( ',' setting )* '}' )
            // D:\\My projects\\BFsharp\\BFsharp.Formula\\Formula.g:32:11: '{' ( setting )? ( ',' setting )* '}'
            {
            	root_0 = (CommonTree)adaptor.GetNilNode();

            	char_literal28=(IToken)Match(input,39,FOLLOW_39_in_settings197); 
            		char_literal28_tree = (CommonTree)adaptor.Create(char_literal28);
            		root_0 = (CommonTree)adaptor.BecomeRoot(char_literal28_tree, root_0);

            	// D:\\My projects\\BFsharp\\BFsharp.Formula\\Formula.g:32:16: ( setting )?
            	int alt10 = 2;
            	int LA10_0 = input.LA(1);

            	if ( (LA10_0 == ID) )
            	{
            	    alt10 = 1;
            	}
            	switch (alt10) 
            	{
            	    case 1 :
            	        // D:\\My projects\\BFsharp\\BFsharp.Formula\\Formula.g:32:0: setting
            	        {
            	        	PushFollow(FOLLOW_setting_in_settings200);
            	        	setting29 = setting();
            	        	state.followingStackPointer--;
